--- a/app/views/address_books/new.js.erb
+++ b/app/views/address_books/new.js.erb
@@ -1,2 +1,3 @@
 $('#task-form').html("<%= j (render 'form') %>");
-$('#task-form').slideDown(350);
+alert("AJAX模式！！！")
+$('#task-form').slideDown(500);
