--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
   <ul> 
     <li><%= current_user.email %></li> 
     <li><%= link_to "Log out", logout_path, method: "delete" %></li> 
+	<li><%= link_to "Jquery Tests...", jquery_path %></li> 
   </ul> 
 <% else %> 
   <ul> 
